--- a/src/manager/DataList.css
+++ b/src/manager/DataList.css
@@ -1,3 +1,13 @@
+.dataTable{
+    width: 800px;
+}
+
+.dataTable > thead{
+    font-weight: 900;
+    text-align: left;
+    border-bottom: 1px solid;
+}
+
 .dataImage{
     width: 80px;
     height: 80px;
