--- a/src/user/Result.css
+++ b/src/user/Result.css
@@ -1,22 +1,24 @@
 .resultWrapper{
-    margin-top: 20px;
 }
 .resultTitle{
     font-weight: 900;
     margin-bottom: 10px;
 }
 .horizontalLine{
-    margin-bottom: 30px;
+}
+.unitContainerWrapper{
+    position: relative;
+    height: 450px;
+    width: 800px;
 }
 .unitContainer{
-    height: 390px;
+    height: 450px;
     width: 800px;
     display: flex;
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content:flex-start;
-    overflow: hidden;
     overflow-x: scroll;
 
     scroll-behavior: smooth;
@@ -27,12 +29,13 @@
 
 .scrollButton{
     position: absolute;
+    top:120px;
     width:100px;
     height:100px;
     border-radius: 50%;
     background-color: black;
     opacity: 10%;
-
+    z-index: 2;
     display: flex;
     align-items: center;
     justify-content:center;
@@ -40,11 +43,11 @@
 }
 
 .leftButton{
-    left: 0px;
+    left:-50px
 }
 
 .rightButton{
-    right: 0px;
+    right: -50px;
 }   
 
 .unitItem{
@@ -68,9 +71,10 @@
 }
 
 .shadow{
-    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #FFC300;
     color:white;
+    z-index: 1;
 }
 
 .itemImg{
