--- a/src/user/UserPage.css
+++ b/src/user/UserPage.css
@@ -1,16 +1,17 @@
 body{
     background-color:white;
 }
-.page{
-    padding:30px;
+
+.description{
+    margin-bottom: 40px;
 }
-.subTitle{
-    font-size: 20px;
-    font-weight: 900;
+
+.manualTitle{
+    font-weight: 700;
     margin-bottom: 10px;
 }
 .manual{
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 #canvas-wrapper{
@@ -34,24 +35,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 #upload{
     display: none;
 }
 
-.buttonBox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    width: 150px;
-    height: 40px;
-}
-.buttonText{
-    color: white;
-    text-align: center;
-    vertical-align: middle;
-    font-weight: 700;
 
-}
